--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ sklearn = "^0.0"
 black = "^21.7b0"
 pytest = "^6.2.4"
 isort = "^5.9.3"
+ipykernel = "^6.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
