--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ jupyterlab = "^3.1.6"
 tensorflow = "^2.6.0"
 seaborn = "^0.11.1"
 sklearn = "^0.0"
+tqdm = "^4.62.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
