--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,20 @@ authors = ["Jonathan <jonathan.hilgart@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pandas = "^1.3.1"
+pandas = "1.2.0"
 jupyterlab = "^3.1.6"
 tensorflow = "^2.6.0"
 seaborn = "^0.11.1"
 sklearn = "^0.0"
 tqdm = "^4.62.1"
+darts = "^0.10.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
 pytest = "^6.2.4"
 isort = "^5.9.3"
 ipykernel = "^6.1.0"
+ipywidgets = "^7.6.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
