--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^6.2.4"
 isort = "^5.9.3"
 ipykernel = "^6.1.0"
 ipywidgets = "^7.6.3"
+black = {version = "19.3b0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
