--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ isort = "^5.9.3"
 ipykernel = "^6.1.0"
 ipywidgets = "^7.6.3"
 black = {version = "19.3b0", allow-prereleases = true}
+autopep8 = "^1.5.7"
 
 [build-system]
 requires = ["poetry>=0.12"]
