working on configs

--- a/app/constants.yml
+++ b/app/constants.yml
@@ -2,3 +2,8 @@ s3_bucket: go-trader
 s3_data_location: data
 bitcoin_filename: data/historic_crypto_prices - bitcoin_jan_2017_sep_4_2021 copy.csv
 etherum_filename: data/historic_crypto_prices - bitcoin_jan_2017_sep_4_2021 copy.csv
+ml_models_location: models
+# bitcoin_tcn_model:_name bitcoin_tcn TODO
+# bitcoin_nbeats_model_name:
+# etherum_tcn_model:_name etherum_tcn TODO
+# etherum_nbeats_model_name:
