--- a/app/ml_config.yml
+++ b/app/ml_config.yml
@@ -1,23 +1,24 @@
 prediction_params:
     bollinger_window: 14
     no_of_std: 1.25
-    ml_lookback_window: 31
-    ml_prediction_n_days: 30
+    ml_lookback_window: 15
+    ml_prediction_n_days: 14
     additional_dfs: [bitcoin_df]
     stop_loss_pct: .10,
     model_name: ["TCN", "NBEATS"]
 hyperparameters_tcn:
-    model_name_etherum: tcn_etherum_30_days.pth.tar
-    model_name_bitcoin: tcn_bitcoin_30_days.pth.tar
+    model_name_etherum: tcn_eth_14_days.pth.tar
+    model_name_bitcoin: tcn_btc_14_days.pth.tar
     dropout: 0.10
     random_state: 0
     dilation_base: 2
     kernel_size: 3
     num_filters: 6
     num_layers: 6
+    weight_norm: True
 hyperparameters_nbeats:
-    model_name_etherum: nbeats_etherum_30_days.pth.tar
-    model_name_bitcoin: nbeats_bitcoin_30_days.pth.tar
+    model_name_etherum: nbeats_eth_14_days.pth.tar
+    model_name_bitcoin: nbeats_btc_14_days.pth.tar
     random_state: 0
     num_blocks: 4
     layer_widths: 512
