reading in models

--- a/app/constants.yml
+++ b/app/constants.yml
@@ -2,10 +2,16 @@ s3_bucket: go-trader
 s3_data_location: data
 # TODO: will need to make a data directory locally?
 bitcoin_csv_filename: data/historic_crypto_prices - bitcoin_jan_2017_sep_4_2021 copy.csv
-etherum_csv_filename: data/historic_crypto_prices - bitcoin_jan_2017_sep_4_2021 copy.csv
+etherum_csv_filename: data/historic_crypto_prices - etherum_jan_2017_sept_4_2021 copy.csv
 # TODO: will need to make a mdoels directory locally?
-# ml_models_location: models
-tcn_model_btc: models/tcn_btc_14_days.pth.tar
-tcn_model_eth: models/tcn_eth_14_days.pth.tar
+tcn_modelname_btc: 31_tcn
+tcn_modelname_eth: 31_tcn_eth
+tcn_filename_eth: checkpoint_5649_eth_tcn.pth.tar
 nbeats_model_btc: models/nbeats_btc_14_days.pth.tar
 nbeats_model_eth: models/nbeats_eth_14_days.pth.tar
+ml_models_dir: models
+
+
+
+    # model_name_etherum: checkpoint_nbeats_eth_14_days.pth.tar
+    # model_name_bitcoin: checkpoint_nbeats_btc_14_days.pth.tar
