python predictions working

--- a/app/ml_config.yml
+++ b/app/ml_config.yml
@@ -1,10 +1,10 @@
 prediction_params:
-    bollinger_window: 14
-    no_of_std: 1.25
-    lookback_window: 31
-    prediction_n_days: 30
+    bollinger_window: 7
+    no_of_std: 1.5
+    lookback_window: 15
+    prediction_n_days: 14
     additional_dfs: [bitcoin_df]
-    stop_loss_pct: .10,
+    stop_loss_pct: .05,
     model_name: ["TCN", "NBEATS"]
 hyperparameters_tcn:
     dropout: 0.10
@@ -14,9 +14,11 @@ hyperparameters_tcn:
     num_filters: 6
     num_layers: 6
     weight_norm: True
+    epochs: 1
 hyperparameters_nbeats:
     random_state: 0
     num_blocks: 4
     layer_widths: 256
+    epochs: 1
 
 
