--- a/app/constants.yml
+++ b/app/constants.yml
@@ -1,21 +1,28 @@
+## Coins to predict information
+btc_product_code: "BTC/USD"
+eth_product_code: "ETH/USD"
+candle_granularity: 864000
+
+## S3 and data information
 s3_bucket: go-trader
 s3_data_location: data
 # TODO: will need to make a data directory locally?
 bitcoin_csv_filename: data/historic_crypto_prices - bitcoin_jan_2017_sep_4_2021 copy.csv
 etherum_csv_filename: data/historic_crypto_prices - etherum_jan_2017_sept_4_2021 copy.csv
+
+## Model filename information
 # TODO: will need to make a models/checkpoints directory locally?
 tcn_modelname_btc: 31_tcn_btc
 tcn_modelname_eth: 31_tcn_eth
-tcn_filename_eth: checkpoint_5649_eth_tcn.pth.tar
+tcn_filename_eth: checkpoint_5649.pth.tar
 tcn_filename_btc: checkpoint_4499.pth.tar
+
 nbeats_modelname_btc: 31_nbeats_btc
 nbeats_modelname_eth: 31_nbeats_eth
 nbeats_filename_btc: checkpoint_257.pth.tar
-nbeats_model_btc: models/nbeats_btc_14_days.pth.tar
-nbeats_model_eth: models/nbeats_eth_14_days.pth.tar
+nbeats_filename_eth: checkpoint_257.pth.tar
+
 ml_models_dir: models
+ml_model_dir_prefix: models/checkpoints
 
-
-
-    # model_name_etherum: checkpoint_nbeats_eth_14_days.pth.tar
-    # model_name_bitcoin: checkpoint_nbeats_btc_14_days.pth.tar
+python_script_path: app/mlcode/predict_price_movements.py
