--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ ipykernel = "^6.1.0"
 ipywidgets = "^7.6.3"
 black = {version = "19.3b0", allow-prereleases = true}
 autopep8 = "^1.5.7"
+flake8 = "^3.9.2"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry>=0.12"]
