--- a/tests/configs/trading_state_config.yml
+++ b/tests/configs/trading_state_config.yml
@@ -1,8 +1,18 @@
-buy_entry_price: 0
-short_entry_price: 0
-mode: "no_position"
-stop_loss_pct: .05
-stop_loss_price: 0
-buy_has_crossed_mean: False
-short_has_crossed_mean: False
-position_entry_date: None
+btc:
+  buy_entry_price: 0
+  buy_has_crossed_mean: false
+  mode: no_position
+  position_entry_date: None
+  short_entry_price: 0
+  short_has_crossed_mean: false
+  stop_loss_pct: 0.05
+  stop_loss_price: 0
+eth:
+  buy_entry_price: 0
+  buy_has_crossed_mean: false
+  mode: no_position
+  position_entry_date: None
+  short_entry_price: 0
+  short_has_crossed_mean: false
+  stop_loss_pct: 0.05
+  stop_loss_price: 0
