--- a/.github/workflows/python_lint_and_test.yml
+++ b/.github/workflows/python_lint_and_test.yml
@@ -48,11 +48,11 @@ jobs:
       #----------------------------------------------
       #              run test suite
       # #----------------------------------------------
-      # - name: Run tests
-      #   run: |
-      #     source .venv/bin/activate
-      #     pytest tests/
-      #     coverage report
+      - name: Run tests
+        run: |
+          source .venv/bin/activate
+          poetry run python -m pytest
+          coverage report
       - name: lint
         run: poetry run black . --check
       - name: flake8 
