--- a/app/actions_to_take.yml
+++ b/app/actions_to_take.yml
@@ -1,6 +1,4 @@
-# valid values are none_to_none, buy_to_none, short_to_none, none_to_buy, none_to_short, buy_to_continue_buy, short_to_continue_short
 btc:
-  action_to_take: None
+  action_to_take: none
 eth:
-  action_to_take: None
-  
+  action_to_take: none
