--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ black = {version = "19.3b0", allow-prereleases = true}
 autopep8 = "^1.5.7"
 flake8 = "^3.9.2"
 mypy = "^0.910"
+pytest-coverage = "^0.0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
