adding in different coin cli args

--- a/app/constants.yml
+++ b/app/constants.yml
@@ -30,4 +30,4 @@ nbeats_filename_eth: checkpoint_257.pth.tar
 ml_models_dir: models
 ml_model_dir_prefix: models/checkpoints
 
-python_script_path: app/mlcode/determine_trading_state.py
+python_script_path: app/mlcode/main.py
