--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,11 @@ mypy = "^0.910"
 pytest-coverage = "^0.0"
 pytest-cov = "^3.0.0"
 cbpro = { git = "https://github.com/danpaquin/coinbasepro-python.git" }
+pytest-env = "^0.6.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.pytest.ini_options]
+env = ["ON_LOCAL=true"]
