--- a/tests/configs/ml_config.yml
+++ b/tests/configs/ml_config.yml
@@ -5,11 +5,12 @@ prediction_params:
     prediction_n_days: 1
     additional_dfs: [bitcoin_df]
     model_name: ["TCN", "NBEATS"]
+    work_dir: "/mnt/shared-storage"
 hyperparameters_tcn:
     dropout: 0.10
     random_state: 0
     dilation_base: 2
-    kernel_size: 3
+    kernel_size: 1
     num_filters: 6
     num_layers: 6
     weight_norm: True
@@ -19,5 +20,3 @@ hyperparameters_nbeats:
     num_blocks: 4
     layer_widths: 256
     epochs: 1
-
-
