--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,12 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.4.0
     hooks:
+      - id: no-commit-to-branch
+        args:
+          [
+            "--branch",
+            "main",
+          ]
       - id: check-json
       - id: check-toml
       - id: check-yaml
