--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,12 +33,13 @@ repos:
     hooks:
       - id: remove-crlf
       - id: remove-tabs
-  - repo: https://github.com/psf/black
-    rev: 20.8b1
-    hooks:
-      - id: black
-        name: Format changed Python files with Black
-        args: [--line-length=120]
+      # this doesn't play well with the poetry black
+  # - repo: https://github.com/psf/black
+  #   rev: 20.8b1
+  #   hooks:
+  #     - id: black
+  #       name: Format changed Python files with Black
+  #       args: [--line-length=120]
   - repo: https://github.com/gruntwork-io/pre-commit
     rev: v0.0.9
     hooks:
