--- a/tests/configs/constants.yml
+++ b/tests/configs/constants.yml
@@ -1,16 +1,22 @@
 ## Coins to predict information
-btc_product_code: "BTC/USD"
-eth_product_code: "ETH/USD"
-spy_product_code: "SPY/USD"
+btc_product_code: BTC/USD
+eth_product_code: ETH/USD
+spy_product_code: SPY/USD
 candle_granularity: 86400
 
 ## S3 and data information
 s3_bucket: go-trader
 s3_data_location: data
+s3_configs_locations:
 # TODO: will need to make a data directory locally?
 bitcoin_csv_filename: data/historic_crypto_prices - bitcoin_jan_2017_sep_4_2021 copy.csv
 etherum_csv_filename: data/historic_crypto_prices - etherum_jan_2017_sept_4_2021 copy.csv
-spy_csv_filename: data/historic_crypto_prices - SPY_historicaly.csv
+actions_to_take_filename: app/actions_to_take.yml
+constants_filename: app/constants.yml
+ml_config_filename: app/ml_config.yml
+trading_state_config_filename: app/trading_state_config.yml
+won_and_lost_amount_filename: app/won_and_lost_amount_config.yml
+
 
 ## DF cols
 rolling_mean_col: Rolling Mean
@@ -21,6 +27,10 @@ open_col: open
 high_col: high
 low_col: low
 close_col: close
+macd_col: macd
+macd_signal_col: macd_signal
+rsi_col: relative_strength_index
+
 
 ## Model filename information
 # TODO: will need to make a models/checkpoints directory locally?
@@ -37,6 +47,6 @@ nbeats_filename_eth: checkpoint_257.pth.tar
 ml_models_dir: models
 ml_model_dir_prefix: models/checkpoints
 
-python_script_path: app/mlcode/determine_trading_state.py
+python_script_path: app/mlcode/main.py
 
 log_filename: logs.txt
