--- a/.github/workflows/python_lint_and_test.yml
+++ b/.github/workflows/python_lint_and_test.yml
@@ -57,8 +57,9 @@ jobs:
         run: poetry run black . --check
       - name: flake8
         run: poetry run flake8 .
-      - name: isort
-        run: poetry run isort . --check
+        ## black already sorts
+      # - name: isort
+      #   run: poetry run isort . --check
         # TODO: add back in
       # - name: mypy
       #   run: poetry run mypy  . --check
