--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tqdm = "^4.62.1"
 darts = "^0.10.1"
 pyyaml = "^5.4.1"
 click = "^8.0.1"
+finta = "^1.3"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.1.6"
