--- a/app/trading_state_config.yml
+++ b/app/trading_state_config.yml
@@ -16,3 +16,12 @@ eth:
   short_has_crossed_mean: false
   stop_loss_pct: 0.10
   stop_loss_price: 0
+sol:
+  buy_entry_price: 0
+  buy_has_crossed_mean: false
+  mode: no_position
+  position_entry_date: None
+  short_entry_price: 0
+  short_has_crossed_mean: false
+  stop_loss_pct: 0.10
+  stop_loss_price: 0
