--- a/app/won_and_lost_amount_config.yml
+++ b/app/won_and_lost_amount_config.yml
@@ -18,3 +18,13 @@ eth:
   n_short_lost: 0
   n_short_won: 0
   n_total_days_in_trades: 0
+sol:
+  dollar_amount_buy_lost: 0
+  dollar_amount_buy_won: 0
+  dollar_amount_short_lost: 0
+  dollar_amount_short_won: 0
+  n_buy_lost: 0
+  n_buy_won: 0
+  n_short_lost: 0
+  n_short_won: 0
+  n_total_days_in_trades: 0
