--- a/tests/configs/trading_state_config.yml
+++ b/tests/configs/trading_state_config.yml
@@ -5,7 +5,7 @@ btc:
   position_entry_date: None
   short_entry_price: 0
   short_has_crossed_mean: false
-  stop_loss_pct: 0.05
+  stop_loss_pct: 0.10
   stop_loss_price: 0
 eth:
   buy_entry_price: 0
@@ -14,5 +14,14 @@ eth:
   position_entry_date: None
   short_entry_price: 0
   short_has_crossed_mean: false
-  stop_loss_pct: 0.05
+  stop_loss_pct: 0.10
+  stop_loss_price: 0
+sol:
+  buy_entry_price: 0
+  buy_has_crossed_mean: false
+  mode: no_position
+  position_entry_date: None
+  short_entry_price: 0
+  short_has_crossed_mean: false
+  stop_loss_pct: 0.10
   stop_loss_price: 0
