--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,30 +6,25 @@ authors = ["Jonathan <jonathan.hilgart@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8.2"
-pandas = "1.2.0"
-seaborn = "^0.11.1"
-sklearn = "^0.0"
 tqdm = "^4.62.1"
-darts = "^0.10.1"
 pyyaml = "^5.4.1"
 click = "^8.0.1"
+pandas = "1.3.0"
+darts = "0.13.1"
 finta = "^1.3"
 
 [tool.poetry.dev-dependencies]
-jupyterlab = "^3.1.6"
 pytest = "^6.2.4"
 isort = "^5.9.3"
-ipykernel = "^6.1.0"
-ipywidgets = "^7.6.3"
 black = {version = "19.3b0", allow-prereleases = true}
 autopep8 = "^1.5.7"
 flake8 = "^3.9.2"
 mypy = "^0.910"
-pytest-coverage = "^0.0"
-pytest-cov = "^3.0.0"
-cbpro = { git = "https://github.com/danpaquin/coinbasepro-python.git" }
 pytest-env = "^0.6.2"
 types-PyYAML = "^5.4.12"
+jupyterlab = "^3.2.4"
+ipython = "^7.29.0"
+ipykernel = "^6.5.1"
 
 [tool.pytest.ini_options]
 env = ["ON_LOCAL=true"]
