--- a/.github/workflows/code_lint_and_test.yml
+++ b/.github/workflows/code_lint_and_test.yml
@@ -80,9 +80,5 @@ jobs:
         run: poetry run black . --check
       - name: flake8
         run: poetry run flake8 .
-        ## black already sorts
-      # - name: isort
-      #   run: poetry run isort . --check
-        # TODO: add back in
-      # - name: mypy
-      #   run: poetry run mypy  . --check
+      - name: mypy
+        run: poetry run mypy  . --check
