--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ isort = "^5.9.3"
 black = {version = "19.3b0", allow-prereleases = true}
 autopep8 = "^1.5.7"
 flake8 = "^3.9.2"
-mypy = "^0.910"
 pytest-env = "^0.6.2"
 types-PyYAML = "^5.4.12"
 jupyterlab = "^3.2.4"
@@ -27,6 +26,7 @@ ipython = "^7.29.0"
 ipykernel = "^6.5.1"
 coverage = "^6.1.2"
 ccxt = "^1.77.11"
+mypy = "^0.942"
 
 [tool.pytest.ini_options]
 env = ["ON_LOCAL=true"]
@@ -36,3 +36,13 @@ line-length=120
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+
+[tool.mypy]
+check_untyped_defs = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+strict_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
