--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ finta = "^1.3"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
 isort = "^5.9.3"
-black = {version = "19.3b0", allow-prereleases = true}
 autopep8 = "^1.5.7"
 flake8 = "^3.9.2"
 pytest-env = "^0.6.2"
@@ -27,6 +26,7 @@ ipykernel = "^6.5.1"
 coverage = "^6.1.2"
 ccxt = "^1.77.11"
 mypy = "^0.942"
+black = "^22.3.0"
 
 [tool.pytest.ini_options]
 env = ["ON_LOCAL=true"]
