--- a/.github/workflows/code_lint_and_test.yml
+++ b/.github/workflows/code_lint_and_test.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          virtualenvs-create: false
-          virtualenvs-in-project: false
+          virtualenvs-create: true
+          virtualenvs-in-project: true
           installer-parallel: true
 
       #----------------------------------------------
@@ -53,6 +53,7 @@ jobs:
         id: cached-poetry-dependencies
         uses: actions/cache@v2
         with:
+          path: .venv
           key: venv-${{ hashFiles('**/poetry.lock') }}
       #----------------------------------------------
       # install dependencies if cache does not exist
