assert date logic

--- a/.github/workflows/code_lint_and_test.yml
+++ b/.github/workflows/code_lint_and_test.yml
@@ -69,9 +69,14 @@ jobs:
       #----------------------------------------------
       #              run test suite
       # #----------------------------------------------
+      - name: Setup Code Climate test-reporter
+        run: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
       - name: Run tests
         run: |
           source .venv/bin/activate
+          ./cc-test-reporter before-build
           poetry run python -m pytest
       - name: Coverage
         run: |
