--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ ccxt = "^1.77.11"
 mypy = "^0.942"
 black = "^22.3.0"
 ipywidgets = "^7.7.0"
+pytest-cov = "^3.0.0"
+freezegun = "^1.2.1"
 
 [tool.pytest.ini_options]
 env = ["ON_LOCAL=true"]
