--- a/.github/workflows/code_lint_and_test.yml
+++ b/.github/workflows/code_lint_and_test.yml
@@ -81,6 +81,11 @@ jobs:
       - name: Coverage
         run: |
           poetry run coverage run -m pytest && poetry run coverage xml
+      - name: Upload Coverage
+        run: |
+          export CC_TEST_REPORTER_ID=0db0e2cce20c934be6a79128cf743b8b0bd036ef50b4778d5eeda7f1598cd194
+          ./cc-test-reporter format-coverage -t coverage.py
+          ./cc-test-reporter upload-coverage
       - name: lint
         run: poetry run black . --check
       - name: flake8
