back to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [flake8]
+max-line-length=120
 ignore = E501, E712, E711, E266, W503
 exclude =
     .git,
@@ -9,3 +10,4 @@ exclude =
     dist,
     .venv,
     terraform
+max-complexity=10
