--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ black = "^22.3.0"
 ipywidgets = "^7.7.0"
 pytest-cov = "^3.0.0"
 freezegun = "^1.2.1"
+pyproject-flake8 = "^0.0.1-alpha.3"
 
 [tool.pytest.ini_options]
 env = ["ON_LOCAL=true"]
