--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ ipykernel = "^6.5.1"
 coverage = "^6.1.2"
 ccxt = "^1.77.11"
 mypy = "^0.942"
-black = "^22.3.0"
+black = {version = "^22.3.0"}
 ipywidgets = "^7.7.0"
 pytest-cov = "^3.0.0"
 freezegun = "^1.2.1"
