--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
       - id: trailing-whitespace
       - id: detect-aws-credentials
       - id: check-added-large-files
+        args: ['--maxkb=5000']
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.1.7
     hooks:
