--- a/tests/configs/ml_config.yml
+++ b/tests/configs/ml_config.yml
@@ -20,3 +20,5 @@ hyperparameters_nbeats:
     num_blocks: 4
     layer_widths: 256
     epochs: 1
+hyperparameters_random_forest:
+    n_estimators: 200
