--- a/notebooks/training_configs/sol_trading_state_config.yml
+++ b/notebooks/training_configs/sol_trading_state_config.yml
@@ -1,8 +1,8 @@
-buy_entry_price: 0.0
-buy_has_crossed_mean: 0.0
-mode: no_position
-position_entry_date: null
+buy_entry_price: 136.5
+buy_has_crossed_mean: 1.0
+mode: buy
+position_entry_date: '2022-01-07'
 short_entry_price: 0.0
 short_has_crossed_mean: 0.0
 stop_loss_pct: 0.1
-stop_loss_price: 0.0
+stop_loss_price: 136.29825
