--- a/.github/workflows/code_lint_and_test.yml
+++ b/.github/workflows/code_lint_and_test.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Upload Coverage Golang
         run: |
 
-          ./cc-test-reporter after-build --prefix github.com/jonhilgart22/go-trader ${CC_TEST_REPORTER_ID}
+          ./cc-test-reporter after-build --prefix github.com/jonhilgart22/go-trader -r 0db0e2cce20c934be6a79128cf743b8b0bd036ef50b4778d5eeda7f1598cd194
 
       - name: lint
         run: poetry run black . --check
