break apart base prediction df

--- a/tests/configs/ml_config.yml
+++ b/tests/configs/ml_config.yml
@@ -22,3 +22,5 @@ hyperparameters_nbeats:
     epochs: 1
 hyperparameters_random_forest:
     n_estimators: 200
+hyperparameters_gradient_boosting:
+    n_estimators: 150
