--- a/notebooks/training_configs/constants.yml
+++ b/notebooks/training_configs/constants.yml
@@ -81,6 +81,8 @@ date_col: date
 
 ## DF cols for price predictions
 date_prediction_for_col: date_prediction_for
+stacking_prediction_col: stacking_prediction
+
 
 # directory information
 
