--- a/notebooks/training_configs/link_trading_state_config.yml
+++ b/notebooks/training_configs/link_trading_state_config.yml
@@ -1,8 +1,8 @@
-buy_entry_price: 0.0
+buy_entry_price: 28.46
 buy_has_crossed_mean: 0.0
-mode: no_position
-position_entry_date: null
+mode: buy
+position_entry_date: '2021-03-12'
 short_entry_price: 0.0
 short_has_crossed_mean: 0.0
 stop_loss_pct: 0.1
-stop_loss_price: 0.0
+stop_loss_price: 25.614
