--- a/notebooks/training_configs/link_won_and_lost_config.yml
+++ b/notebooks/training_configs/link_won_and_lost_config.yml
@@ -1,9 +1,9 @@
-dollar_amount_buy_lost: 0.0
-dollar_amount_buy_won: 0.0
+dollar_amount_buy_lost: 12.350000000000001
+dollar_amount_buy_won: 13.84
 dollar_amount_short_lost: 0.0
 dollar_amount_short_won: 0.0
-n_buy_lost: 0.0
-n_buy_won: 0.0
+n_buy_lost: 18.0
+n_buy_won: 14.0
 n_short_lost: 0.0
 n_short_won: 0.0
-n_total_days_in_trades: 0.0
+n_total_days_in_trades: 131.0
